--- a/public/event/obscura/index.html
+++ b/public/event/obscura/index.html
@@ -66,7 +66,7 @@
   <!-- <button  class="tsbutton">Register Now</button> --><!-- <noscript id="tsNoJsMsg">Javascript on your browser is not enabled.</noscript><script src="https://www.townscript.com/popup-widget/townscript-widget.nocache.js" type="text/javascript"></script> -->
 </div>
 <div class="col-md-7">
-  <div class="item" style="height: unset;">
+  <div class="item" style="height: unset; ">
     
           
          <div class="controls">
@@ -97,7 +97,7 @@ Enter at own risk, there's no getting out.
           <div style="margin-top: 30px;" class ="row">
 
               <div class="col-md-8">
-              <p ><span class="spPurple" > >>>Event Rules</span></br>* REFER obscura main page </p>
+              <p ><span class="spPurple" > >>>Event Rules</span></br>* REFER <br><a href="https://obscura.dotslashcet.org/">obscura.dotslashcet.org</a> </p>
               </div>
               <div class="col-md-4">
               <p><span class="spOrange">$Prize</span></p><p><span style="font-size:60px;margin-top: 10px;">6k</span></p>
@@ -113,7 +113,7 @@ Enter at own risk, there's no getting out.
               </div>
 
               <div class="col-md-6">
-              <p ><span class="spPurple" >//Contact</span></br>* Abhijith Nandagopal - NO EVDE!</br>* Gopal - NO EVDE!</br></p>
+              <p ><span class="spPurple" >//Contact</span></br>* Abhijith Nandagopal - 9840815311</br>* Gopal - 8281332072</br></p>
               </div>
 
           </div>
