--- a/public/event/women_coder/index.html
+++ b/public/event/women_coder/index.html
@@ -62,7 +62,7 @@
      <h1 style="text-align: center;"><span class="spMagenta">< Event ></span></h1>
   <div class="col-md-4">
   <img src="../../assets/img/iconwomencoding.png" class="img-responsive pull-center">
- <p style="font-size: 30px;margin-top: 20px; text-align: center;"><a onclick="popup('dotslash-workshops-100344');" href="#" ><span class="spMagenta" >Register_now()</span></a></br></p>
+ <p style="font-size: 30px;margin-top: 20px; text-align: center;"><a onclick="popup('dotslash-workshops-100344');" href="#" ><span class="spGreen" >//coming soon</span></a></br></p>
   <!-- <button  class="tsbutton">Register Now</button> --><!-- <noscript id="tsNoJsMsg">Javascript on your browser is not enabled.</noscript><script src="https://www.townscript.com/popup-widget/townscript-widget.nocache.js" type="text/javascript"></script> -->
 </div>
 <div class="col-md-7">
@@ -80,13 +80,12 @@
             <div style="margin-top: 30px;" class ="row">
 
               <div class="col-md-7">
-              <p ><span class="spGreen" >//About</span></br>ABOUT ILLA ! enth ?
-
+              <p ><span class="spGreen" >//About</span></br>Coming soon ...
               </p>
               </div>
 
               <div class="col-md-5">
-              <p><span class="spMagenta">#Date and timing</span></br>ILLA</p>
+              <p><span class="spMagenta">#Date and timing</span></br>..</p>
               </div>
 
           </div>
@@ -94,10 +93,10 @@
           <div style="margin-top: 30px;" class ="row">
 
               <div class="col-md-8">
-              <p ><span class="spPurple" > >>>Event Rules</span></br>* RULE_ILLA</br>* RULE_ILLA</br>* RULE_ILLA</p>
+              <p ><span class="spPurple" > >>>Event Rules</span></br>* Coming soon ...</br>* </br>* </p>
               </div>
               <div class="col-md-2">
-              <p><span class="spOrange">$Prize-First</span></p><p></br><span style="font-size:60px;margin-top: 10px;">10k</span></p>
+              <p><span class="spOrange">$Prize</span></p><p></br><span style="font-size:60px;margin-top: 10px;">10k</span></p>
               </div>
 
           </div>
@@ -106,7 +105,7 @@
 
 
               <div class="col-md-6">
-               <p style="font-size: 30px;margin-top: 20px;"><a href="#" onclick="popup('dotslash-workshops-100344');"><span class="spMagenta" >Register_now()</span></a></br></p>
+               <p style="font-size: 30px;margin-top: 20px;"><a href="#" onclick="popup('dotslash-workshops-100344');"><span class="spGreen" >//coming soon</span></a></br></p>
               </div>
 
               <div class="col-md-6">
