--- a/public/home_temp.html
+++ b/public/home_temp.html
@@ -14,7 +14,7 @@
 	<link rel="stylesheet" type="text/css" href="assets/css/bootstrap.min.css">
 
 	<link href="https://fonts.googleapis.com/css?family=Roboto+Mono" rel="stylesheet">
-  
+  <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
  <!--  <script src="assets/js/modernizr.custom.js"></script> -->
 
 
@@ -538,11 +538,13 @@ modal code
         <button class="cn-button" id="cn-button">+</button>
         <div class="cn-wrapper" id="cn-wrapper">
             <ul>
-              <li><a href="#"></a></li>
-              <li><a href="#"><i class="fa fa-book"></i></a></li>
+              <li><a href="#"><i class="material-icons"  style="transform: rotate(70deg);">phone</i></a></li>
+              <li><a href="#"><i class="fa fa-laptop" ></i></a></li>
               <li><a href="#"><i class="fa fa-home"></i></a></li>
                <li><a href="#"><i class="fa fa-flag-checkered"></i></a></li>
               <li><a href="#"><i class="fa fa-users"></i></a></li>
+
+
              </ul>
         </div>
         <div id="cn-overlay" class="cn-overlay"></div>
