--- a/public/home_temp.html
+++ b/public/home_temp.html
@@ -91,12 +91,12 @@
     <div class="container-fluid">
       <!-- Brand and toggle get grouped for better mobile display -->
       <div class="navbar-header" style="padding: 10px;margin-left: 5vw;">
-        <button aria-expanded="false" class="navbar-toggle collapsed" data-target="#bs-example-navbar-collapse-1" data-toggle="collapse" id="collapser" style="border: 0px;background-color: unset;padding:unset;" type="button">navbar/></button> <a class="navbar-brand" href="#" rel="home" style="padding: unset;"><img alt="Logo Image" src="assets/img/logo.png" style="display:block;height: 45px;padding-top: 5px;"></a>
+        <button aria-expanded="false" class="navbar-toggle collapsed" data-target="#bs-example-navbar-collapse-1" data-toggle="collapse" id="collapser" style="border: 0px;background-color: unset;padding:unset;" type="button">navbar/></button> <a class="navbar-brand" href="#" rel="home" style="padding: unset;"><img alt="Logo Image" src="assets/img/logo.png" style="display:block;height: 45px;padding-top: 5px;" onclick="menuToggle()"></a> 
       </div><!-- Collect the nav links, forms, and other content for toggling -->
       <div class="menu collapse navbar-collapse" id="bs-example-navbar-collapse-1" style="border-color: black; max-height: unset; height: 1px;">
         <ul class="nav navbar-nav navbar-right">
           <li>
-            <a class="at" data-target="#regmodal" data-toggle="modal" href="#" id="Regspn" style="margin-top: 8px;"><span id="regSpan" style="color: white;font-size:18px;">navbar /&gt;</span></a>
+            <a class="at" data-target="#regmodal" data-toggle="modal" href="#" id="Regspn" style="margin-top: 8px;"><span id="regSpan" style="color: white;font-size:18px;" onclick="menuToggle()">navbar /&gt;</span></a>
           </li>
         </ul>
       </div>
