--- a/public/event/quiz/index.html
+++ b/public/event/quiz/index.html
@@ -121,7 +121,21 @@
   </div>
 </div>
 </div>
-
+<section class="foot" style="background-color: #232323">
+          <div class="row">
+            <div class="col-md-4 col-xs-12 footerlog">
+              <img src="../../assets/img/footerimg.png" class="fimg">
+            </div>
+            <div class="col-md-4 col-xs-12">
+              <p>/*Follow us at*/</p>
+              <a href="https://www.facebook.com/dotslashcet/"><i class="fa fa-facebook"></i></a>
+              <a href="https://www.instagram.com/dotslash18/"><i class="fa fa-instagram"></i></a>
+              <a href="mailto:dotslash@cet.ac.in" target="_top"><i class="fa fa-envelope"></i></a>
+              </div>
+            <div class="col-md-4 col-xs-12 footerdesc"><span class="spGreen">//Department of Computer Science<br>and Engineering<br></span><span class="spMagenta">//College of Engineering<br>Trivandrum<br></span><br><span class="spPurple">//Event Convenor<br>Harinath R 8289902408</span></div>
+          
+        </div>
+      </section>
 <div class="component">
         <!-- Start Nav Structure -->
         <button class="cn-button" id="cn-button">+</button>
