footer in workshops

--- a/public/workshop/blockchain/index.html
+++ b/public/workshop/blockchain/index.html
@@ -129,7 +129,7 @@ A blockchain, originally block chain, is a continuously growing list of records,
  <section class="foot" style="background-color: #232323">
           <div class="row">
             <div class="col-md-4 col-xs-12 footerlog">
-              <img src="assets/img/footerimg.png" class="fimg">
+              <img src="../../assets/img/footerimg.png" class="fimg">
             </div>
             <div class="col-md-4 col-xs-12">
               <p>/*Follow us at*/</p>
