--- a/public/workshop/ethical_hacking/index.html
+++ b/public/workshop/ethical_hacking/index.html
@@ -128,7 +128,7 @@
  <section class="foot" style="background-color: #232323">
           <div class="row">
             <div class="col-md-4 col-xs-12 footerlog">
-              <img src="assets/img/footerimg.png" class="fimg">
+              <img src="../../assets/img/footerimg.png" class="fimg">
             </div>
             <div class="col-md-4 col-xs-12">
               <p>/*Follow us at*/</p>
