--- a/public/workshops/index.html
+++ b/public/workshops/index.html
@@ -132,11 +132,11 @@
             </div>
           </div>
      </div>
-     
-  <section class="foot" style="background-color: #232323">
+     </div>
+  <section class="foot" style="background-color: #232323;">
           <div class="row">
             <div class="col-md-4 col-xs-12 footerlog">
-              <img src="assets/img/footerimg.png" class="fimg">
+              <img src="../assets/img/footerimg.png" class="fimg">
             </div>
             <div class="col-md-4 col-xs-12">
               <p>/*Follow us at*/</p>
