--- a/public/home_temp.html
+++ b/public/home_temp.html
@@ -96,7 +96,7 @@
       <div class="menu collapse navbar-collapse" id="bs-example-navbar-collapse-1" style="border-color: black; max-height: unset; height: 1px;">
         <ul class="nav navbar-nav navbar-right">
           <li>
-            <a class="at" data-target="#regmodal" data-toggle="modal" href="#" id="Regspn" style="margin-top: 8px;"><span id="regSpan" style="color: white;font-size:18px;" onclick="menuToggle()">navbar /&gt;</span></a>
+            <a class="at" data-target="#regmodal" data-toggle="modal"  id="Regspn" style="margin-top: 8px;"><span id="regSpan" style="color: white;font-size:18px;" onclick="menuToggle()">navbar /&gt;</span></a>
           </li>
         </ul>
       </div>
