--- a/public/workshop/blockchain/index.html
+++ b/public/workshop/blockchain/index.html
@@ -142,6 +142,7 @@ A blockchain, originally block chain, is a continuously growing list of records,
           
         </div>
       </section>
+      <div class="component">
 <button class="cn-button" id="cn-button">+</button>
         <div class="cn-wrapper" id="cn-wrapper">
             <ul>
