--- a/public/workshops/index.html
+++ b/public/workshops/index.html
@@ -21,6 +21,7 @@
 	<link rel="stylesheet" type="text/css" href="../assets/css/bootstrap.min.css">
 	<link rel="stylesheet" type="text/css" href="../assets/css/style.css">
 	<link href="https://fonts.googleapis.com/css?family=Roboto+Mono" rel="stylesheet">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
  <!--  <script src="assets/js/modernizr.custom.js"></script> -->
 
 
@@ -152,14 +153,17 @@
 
 <div class="component">
         <!-- Start Nav Structure -->
-        <button class="cn-button" id="cn-button">+</button>
+          <button class="cn-button" id="cn-button">+</button>
         <div class="cn-wrapper" id="cn-wrapper">
             <ul>
-              <li><a href="#"><span class="icon-picture"></span></a></li>
-              <li><a href="#"><span class="icon-headphones"></span></a></li>
-              <li><a href="#"><span class="icon-home"></span></a></li>
-              <li><a href="#"><span class="icon-facetime-video"></span></a></li>
-              <li><a href="#"><span class="icon-envelope-alt"></span></a></li>
+
+              <li><a href="#"><i class="material-icons"  style="transform: rotate(70deg);">phone</i></a></li>
+              <li><a href="#ws"><i class="fa fa-laptop" ></i></a></li>
+              <li><a href="#"><i class="fa fa-home"></i></a></li>
+               <li><a href="#events"><i class="fa fa-flag-checkered"></i></a></li>
+              
+            <li><a href="#"><i class="fa fa-users" style="font-size:23px;"></i></a></li>
+
              </ul>
         </div>
         <div id="cn-overlay" class="cn-overlay"></div>
