--- a/public/home_temp.html
+++ b/public/home_temp.html
@@ -535,6 +535,7 @@ modal code
           
         </div>
       </section>
+      <div class="component">
         <button class="cn-button" id="cn-button">+</button>
         <div class="cn-wrapper" id="cn-wrapper">
             <ul>
