--- a/public/workshop/golang/index.html
+++ b/public/workshop/golang/index.html
@@ -140,6 +140,7 @@
           
         </div>
       </section>
+      <div class="component">
 <button class="cn-button" id="cn-button">+</button>
         <div class="cn-wrapper" id="cn-wrapper">
             <ul>
