--- a/public/workshop/machine_learning/index.html
+++ b/public/workshop/machine_learning/index.html
@@ -142,6 +142,7 @@ The workshop  deals with artificial neural networks and support vector machines 
           
         </div>
       </section>
+      <div class="component">
 <button class="cn-button" id="cn-button">+</button>
         <div class="cn-wrapper" id="cn-wrapper">
             <ul>
