added links to semicircle in events

--- a/public/event/obscura/index.html
+++ b/public/event/obscura/index.html
@@ -124,7 +124,7 @@ Enter at own risk, there's no getting out.
   </div>
 </div>
 </div>
-<section class="foot" style="background-color: #232323">
+<section class="foot" style="background-color: #232323" id="footerr">
           <div class="row">
             <div class="col-md-4 col-xs-12 footerlog">
               <img src="../../assets/img/footerimg.png" class="fimg">
@@ -141,16 +141,16 @@ Enter at own risk, there's no getting out.
       </section>
 <div class="component">
         <!-- Start Nav Structure -->
-         <button class="cn-button" id="cn-button">+</button>
+          <button class="cn-button" id="cn-button">+</button>
         <div class="cn-wrapper" id="cn-wrapper">
             <ul>
 
-              <li><a href="#"><i class="material-icons"  style="transform: rotate(70deg);">phone</i></a></li>
-              <li><a href="#ws"><i class="fa fa-laptop" ></i></a></li>
-              <li><a href="#"><i class="fa fa-home"></i></a></li>
-               <li><a href="#events"><i class="fa fa-flag-checkered"></i></a></li>
+              <li><a href="#footerr"><i class="material-icons"  style="transform: rotate(70deg);">phone</i></a></li>
+              <li><a href="../../index.html#ws"><i class="fa fa-laptop" ></i></a></li>
+              <li><a href="../../index.html"><i class="fa fa-home"></i></a></li>
+               <li><a href="../../index.html#events"><i class="fa fa-flag-checkered"></i></a></li>
               
-            <li><a href="#"><i class="fa fa-users" style="font-size:23px;"></i></a></li>
+            <li><a href="../../index.html"><i class="fa fa-users" style="font-size:23px;"></i></a></li>
 
              </ul>
         </div>
