--- a/public/index.html
+++ b/public/index.html
@@ -192,7 +192,7 @@
 
   <div class="row" style="margin:auto" >
     <h1 id="events" style="text-align: center;"><span class="spMagenta">< Events ></span></h1>
-    <div class="col-md-3 col-sm-3">
+    <div class="col-md-4 col-sm-4">
       <div class='box' style="background-color: rgb(28, 28, 27);" onclick="location.href='event/bitcoin_challenge/';">
   <div class='wave -one' style="background-color: rgb(236,65,118);"></div>
   <div class='wave -two'></div>
@@ -204,7 +204,7 @@
 
     </div>
 
-<div class="col-md-3 col-sm-3">
+<div class="col-md-4 col-sm-4">
       <div class='box' style="background-color: rgb(28, 28, 27);" onclick="location.href='event/women_coder';">
   <div class='wave -one' style="background-color: rgb(236,65,118);"></div>
   <div class='wave -two'></div>
@@ -216,7 +216,7 @@
 
     </div>
 
-<div class="col-md-3 col-sm-3">
+<div class="col-md-4 col-sm-4">
       <div class='box' style="background-color: rgb(28, 28, 27);" onclick="location.href='event/code_wars/';">
   <div class='wave -one' style="background-color: rgb(236,65,118);"></div>
   <div class='wave -two'></div>
@@ -228,7 +228,7 @@
 
     </div>
 
-<div class="col-md-3 col-sm-3">
+<div class="col-md-4 col-sm-4">
       <div class='box' style="background-color: rgb(28, 28, 27);" onclick="location.href='event/debugger/';">
   <div class='wave -one' style="background-color: rgb(236,65,118);"></div>
   <div class='wave -two'></div>
@@ -242,7 +242,7 @@
 
 
 
-  <div class="col-md-3 col-sm-3">
+  <div class="col-md-4 col-sm-4">
       <div class='box' style="background-color: rgb(28, 28, 27);" onclick="location.href='event/quiz/';">
   <div class='wave -one' style="background-color: rgb(236,65,118);"></div>
   <div class='wave -two'></div>
@@ -254,7 +254,7 @@
 
     </div>
 
-<div class="col-md-3 col-sm-3">
+<div class="col-md-4 col-sm-4">
       <div class='box' style="background-color: rgb(28, 28, 27);" onclick="location.href='event/gaming/';">
   <div class='wave -one' style="background-color: rgb(236,65,118);"></div>
   <div class='wave -two'></div>
@@ -266,7 +266,7 @@
 
     </div>
 
-<div class="col-md-3 col-sm-3">
+<div class="col-md-4 col-sm-4">
       <div class='box' style="background-color: rgb(28, 28, 27);" onclick="location.href='event/reverse_coding/';">
   <div class='wave -one' style="background-color: rgb(236,65,118);"></div>
   <div class='wave -two'></div>
@@ -278,7 +278,7 @@
 
     </div>
 
-<div class="col-md-3 col-sm-3">
+<div class="col-md-4 col-sm-4">
       <div class='box' style="background-color: rgb(28, 28, 27);" onclick="location.href='event/obscura/';">
   <div class='wave -one' style="background-color: rgb(236,65,118);"></div>
   <div class='wave -two'></div>
@@ -286,6 +286,18 @@
   <img src="assets/img/icon obscura.png" style="height: 230px;margin: auto;display: inherit;padding-bottom: 20px;padding-top: 30px;">
   <p style="text-align: center;margin-top: 78px;">< Obscura ></p>
   <p class="prize">$prize:6k</p>
+</div>
+
+    </div>
+
+    <div class="col-md-4 col-sm-4">
+      <div class='box' style="background-color: rgb(28, 28, 27);" onclick="location.href='event/photomanipulation/';">
+  <div class='wave -one' style="background-color: rgb(236,65,118);"></div>
+  <div class='wave -two'></div>
+  <div class='wave -three'></div>
+  <img src="assets/img/iconphotomani.png" style="height: 230px;margin: auto;display: inherit;padding-bottom: 20px;padding-top: 30px;">
+  <p style="text-align: center;margin-top: 78px;">< Photomanipulation ></p>
+  <p class="prize">$prize:2.5k</p>
 </div>
 
     </div>
