--- a/public/workshop/ethical_hacking/index.html
+++ b/public/workshop/ethical_hacking/index.html
@@ -93,13 +93,13 @@
           <div style="margin-top: 30px;" class ="row">
 
               <div class="col-md-4">
-              <p ><span class="spPurple" > >>>Pre-Requisites</span></br>* Windows (64bit) </br>* 4GB RAM (8 Recommended)
+              <p ><span class="spPurple" > >>>Pre-Requisites</span></br>* Kali linux / Windows (64bit) </br>* 4GB RAM (8 Recommended)
               </br>* USB Drive</br></p>
               </div>
 
               <div class="col-md-4">
               <p><span class="spMagenta">install_these()</span></br>
-              <a href="https://www.virtualbox.org/wiki/Downloads">* Virtual box</a></p>
+              <a href="https://www.virtualbox.org/wiki/Downloads">* Virtual box</a>(for windows)</p>
               </div>
               <div class="col-md-4">
               <p><span class="spOrange">Classes handled by</span></br>* Nandu R </br><!-- <a href="https://www.linkedin.com/in/tittuvarghese/">::check_this_out()</a> --></p>
@@ -159,6 +159,7 @@
       </div>
 
 </div>
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
 <script src="../../assets/js/polyfills.js"></script>
     <script src="../../assets/js/demo1.js"></script>
 <script src="../../assets/js/colorAnim.js"></script>
