--- a/public/workshop/golang/index.html
+++ b/public/workshop/golang/index.html
@@ -159,6 +159,7 @@
       </div>
 
 </div>
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
 <script src="../../assets/js/polyfills.js"></script>
     <script src="../../assets/js/demo1.js"></script>
 <script src="../../assets/js/colorAnim.js"></script>
