--- a/public/workshop/machine_learning/index.html
+++ b/public/workshop/machine_learning/index.html
@@ -161,6 +161,7 @@ The workshop  deals with artificial neural networks and support vector machines 
       </div>
 
 </div>
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
 <script src="../../assets/js/polyfills.js"></script>
     <script src="../../assets/js/demo1.js"></script>
 <script src="../../assets/js/colorAnim.js"></script>
