--- a/public/event/obscura/index.html
+++ b/public/event/obscura/index.html
@@ -47,12 +47,12 @@
     <div class="container-fluid">
       <!-- Brand and toggle get grouped for better mobile display -->
       <div class="navbar-header" style="padding: 10px;margin-left: 5vw;">
-        <button style="border: 0px;background-color: unset;padding:unset;" aria-expanded="false" class="navbar-toggle collapsed" data-target="#bs-example-navbar-collapse-1" data-toggle="collapse" id="collapser" type="button">navbar/></button> <a class="navbar-brand" href="#" rel="home" style="padding: unset;"><img alt="Logo Image" src="../../assets/img/logo.png" style="display:block;height: 45px;padding-top: 5px;"></a>
+       <button aria-expanded="false" class="navbar-toggle collapsed"  style="border: 0px;background-color: unset;padding:unset;"  onclick="menuToggle()" type="button">navbar/></button> <a class="navbar-brand" href="../../" rel="home" style="padding: unset;z-index: 9999;" ><img alt="Logo Image" src="../../assets/img/logo.png" style="display:block;height: 45px;padding-top: 5px;" ></a>  
       </div><!-- Collect the nav links, forms, and other content for toggling -->
       <div class="menu collapse navbar-collapse" id="bs-example-navbar-collapse-1" style="border-color: black; max-height: unset; height: 1px;">
         <ul class="nav navbar-nav navbar-right">
           <li>
-            <a class="at" data-target="#regmodal" data-toggle="modal" href="#" id="Regspn" style="margin-top: 8px;"><span id="regSpan" style="color: white;font-size:18px;">navbar /&gt;</span></a>
+            <a class="at"  style="margin-top: 8px;"><span id="regSpan" style="color: white;font-size:18px;" onclick="menuToggle()">navbar /&gt;</span></a>
           </li>
         </ul>
       </div>
@@ -159,6 +159,7 @@ Enter at own risk, there's no getting out.
       </div>
 
 </div>
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
 <script src="../../assets/js/polyfills.js"></script>
     <script src="../../assets/js/demo1.js"></script>
 <script src="../../assets/js/colorAnim.js"></script>
