added arvind bro number

--- a/public/event/obscura/index.html
+++ b/public/event/obscura/index.html
@@ -114,7 +114,7 @@ Enter at own risk, there's no getting out.
               </div>
 
               <div class="col-md-6">
-              <p ><span class="spPurple" >//Contact</span></br>* Abhijith  - 9840815311</br>* Gopal - 8281332072</br></p>
+              <p ><span class="spPurple" >//Contact</span></br>* Abhijith  - 9840815311</br>* Arvind - 9633565848</br></p>
               </div>
 
           </div>
