--- a/public/index.html
+++ b/public/index.html
@@ -373,7 +373,7 @@
   <div class="cn-wrapper" id="cn-wrapper">
     <ul>
 
-      <li><a href="#"><i class="material-icons"  style="transform: rotate(70deg);">phone</i></a></li>
+      <li><a href="#footerr"><i class="material-icons"  style="transform: rotate(70deg);">phone</i></a></li>
       <li><a href="#ws"><i class="fa fa-laptop" ></i></a></li>
       <li><a href="#"><i class="fa fa-home"></i></a></li>
       <li><a href="#events"><i class="fa fa-flag-checkered"></i></a></li>
@@ -388,7 +388,7 @@
 
 </div>
 
-<section class="foot" style="background-color: #232323;">
+<section class="foot" style="background-color: #232323;" id="footerr">
   <div class="row" >
     <div class="col-md-4 col-xs-12 footerlog">
       <img src="assets/img/footerimg.png" class="fimg">
