added gaming contacts

--- a/public/event/gaming/index.html
+++ b/public/event/gaming/index.html
@@ -117,7 +117,8 @@ Participants are advised to bring their own joysticks/keyboards.
               </div>
 
               <div class="col-md-6">
-              <p ><span class="spPurple" >//Contact</span></br>* Rahul - 9747440596</br>* Ayana - 9995926340</br></p>
+              <p ><span class="spPurple" >//Contact</span></br>Rahul Suresh - 9447657444</br>Vipin George Abraham - 9400551627</br>Rahul Giridharan - 8848266693</br>
+Nithin M - 8848104733</p>
               </div>
 
           </div>
