some minor changes

--- a/public/event/debugger/index.html
+++ b/public/event/debugger/index.html
@@ -113,7 +113,7 @@
                 </div>
 
                 <div class="col-md-6">
-                  <p ><span class="spPurple" >//Contact</span></br>* Sooraj - NO EVDE!</br>* Sreedev - 7736480946</br></p>
+                  <p ><span class="spPurple" >//Contact</span></br>* Sooraj - 96456 65081</br>* Sreedev - 7736480946</br></p>
                 </div>
 
               </div>
