added talks separate pages

--- a/public/index.html
+++ b/public/index.html
@@ -246,7 +246,7 @@
     <div class="row" style="margin:auto" >
   <h1 id="events" style="text-align: center;"><span class="spMagenta">< Talks ></span></h1>
    <div class="col-md-5 col-sm-5 col-md-offset-1 col-sm-offset-1">
-    <div class='box talks' style="background-color: rgb(28, 28, 27);" >
+    <div class='box talks' style="background-color: rgb(28, 28, 27);" onclick="location.href='talks/securitydemonstration/';" >
       
       <img src="assets/img/secure.png" style="height: 200px;margin: auto;display: inherit;padding-bottom: 20px;padding-top: 30px;">
       <img src="assets/img/talkgif.gif" style="height:80px;margin: auto;display: inherit;">
@@ -255,7 +255,7 @@
     </div>
   </div>
    <div class="col-md-5 col-sm-5">
-    <div class='box talks' style="background-color: rgb(28, 28, 27);" >
+    <div class='box talks' style="background-color: rgb(28, 28, 27);" onclick="location.href='talks/informationsecurity/';" >
       
       <img src="assets/img/info.png" style="height: 200px;margin: auto;display: inherit;padding-bottom: 20px;padding-top: 30px;">
        <img src="assets/img/talkgif.gif" style="height:80px;margin: auto;display: inherit;">
