--- a/public/event/bitcoin_challenge/index.html
+++ b/public/event/bitcoin_challenge/index.html
@@ -101,7 +101,7 @@
               </div>
               <div class="col-md-2">
               <p><span class="spOrange">$TakeAway</span></p><p style="margin-top: -10px;"></br><span style="font-size:60px;">&#8377;20k</span></p>
-              <p style="margin-top: 18px;"><span class="spOrange">$EntryFee</span></p><p style="margin-top: -10px; margin-bottom: 26px;"></br><span style="font-size:60px;">&#8377;50</span></p>
+              <p style="margin-top: 18px;"><span class="spOrange">$EntryFee</span></p><p style="margin-top: -10px; margin-bottom: 26px;"></br><span style="font-size:60px;">Free</span></p>
               </div>
 
           </div>
