--- a/public/index.html
+++ b/public/index.html
@@ -84,58 +84,88 @@
 		<div class="row" style="padding-top: 10vh;" id="ws">
 			<h1 style="text-align: center;"><span class="spGreen">/* Workshops */</span></h1>
 			<!-- <h2 style="margin-left: 5vw;"><span class="spMagenta">//lunch'll be provided</span></h2> -->
-			<div class="col-md-3  col-sm-3  " >
-				<div class="item-ws" style="height: unset;" onclick="location.href='workshop/ethical_hacking/';">
+			<div class="col-md-4  col-sm-4  " >
+				<div class="item-ws"  onclick="location.href='workshop/ethical_hacking/';">
 					<div class="controls">
 						<div class="control control-left"></div>
 						<div class="control control-center"></div>
 						<div class="control control-right"></div>
 					</div>
 					<div class="item-desc">
-						<img style="height: unset;" src="assets/img/ethicalicon.png" class="img-responsive pull-center">
+						<img  src="assets/img/ethicalicon.png" class="img-responsive pull-center">
 						<p class="item-heading">Ethical Hacking</p>
 					</div>
 				</div>
 			</div>
-			<div class="col-md-3  col-sm-3  ">
-				<div class="item-ws" style="height: unset;" onclick="location.href='workshop/golang/';">
+			<div class="col-md-4  col-sm-4  ">
+				<div class="item-ws"  onclick="location.href='workshop/golang/';">
 					<div class="controls">
 						<div class="control control-left"></div>
 						<div class="control control-center"></div>
 						<div class="control control-right"></div>
 					</div>
 					<div class="item-desc">
-						<img style="height: unset;" src="assets/img/goicon.png" class="img-responsive pull-center">
+						<img  src="assets/img/goicon.png" class="img-responsive pull-center">
 						<p class="item-heading">Go Language</p>
 					</div>
 				</div>
 			</div>
-			<div class="col-md-3  col-sm-3  ">
-				<div class="item-ws" style="height: unset;" onclick="location.href='workshop/blockchain/';">
+			<div class="col-md-4  col-sm-4  ">
+				<div class="item-ws"  onclick="location.href='workshop/blockchain/';">
 					<div class="controls">
 						<div class="control control-left"></div>
 						<div class="control control-center"></div>
 						<div class="control control-right"></div>
 					</div>
 					<div class="item-desc">
-						<img style="height: unset;" src="assets/img/blockchainicon.png" class="img-responsive pull-center">
+						<img  src="assets/img/blockchainicon.png" class="img-responsive pull-center">
 						<p class="item-heading">Blockchain</p>
 					</div>
 				</div>
 			</div>
-			<div class=" col-md-3  col-sm-3   ">
-				<div class="item-ws" style="height: unset;" onclick="location.href='workshop/machine_learning/';">
+			<div class=" col-md-4  col-sm-4   ">
+				<div class="item-ws" onclick="location.href='workshop/machine_learning/';">
 					<div class="controls">
 						<div class="control control-left"></div>
 						<div class="control control-center"></div>
 						<div class="control control-right"></div>
 					</div>
 					<div class="item-desc">
-						<img style="height: unset;" src="assets/img/mlicon.png" class="img-responsive pull-center">
+						<img  src="assets/img/mlicon.png" class="img-responsive pull-center">
 						<p class="item-heading">Machine Learning</p>
 					</div>
 				</div>
 			</div>
+
+
+        <div class=" col-md-4  col-sm-4   ">
+        <div class="item-ws"  onclick="location.href='workshop/webdevelopment/';">
+          <div class="controls">
+            <div class="control control-left"></div>
+            <div class="control control-center"></div>
+            <div class="control control-right"></div>
+          </div>
+          <div class="item-desc">
+            <img  src="assets/img/webicon.png" class="img-responsive pull-center">
+            <p class="item-heading">Web Development</p>
+          </div>
+        </div>
+      </div>
+
+
+        <div class=" col-md-4  col-sm-4   ">
+        <div class="item-ws"  onclick="location.href='workshop/bigdata/';">
+          <div class="controls">
+            <div class="control control-left"></div>
+            <div class="control control-center"></div>
+            <div class="control control-right"></div>
+          </div>
+          <div class="item-desc">
+            <img  src="assets/img/iconbigdata.png" class="img-responsive pull-center">
+            <p class="item-heading">Big Data</p>
+          </div>
+        </div>
+      </div>
 		</div>
 		<div class="row" style="padding-top: 50px;">
 			<div class="col-md-6" style="padding-left: 10vw;">
@@ -199,7 +229,7 @@
 					<div class='wave -three'></div>
 					<img src="assets/img/iconquiz.png" style="height: 230px;margin: auto;display: inherit;padding-bottom: 20px;padding-top: 30px;">
 					<p style="text-align: center;margin-top: 78px;">< ./Quiz ></p>
-					<p class="prize">$prize:20k</p>
+					<p class="prize">$prize:10k</p>
 				</div>
 			</div>
 			<div class="col-md-4 col-sm-4">
