--- a/public/event/obscura/index.html
+++ b/public/event/obscura/index.html
@@ -63,7 +63,7 @@
      <h1 style="text-align: center;"><span class="spMagenta">< Event ></span></h1>
   <div class="col-md-4">
   <img src="../../assets/img/icon obscura.png" class="img-responsive pull-center">
- <p style="font-size: 30px;margin-top: 20px; text-align: center;"><a onclick="popup('dotslash-workshops-100344');" href="#" ><span class="spMagenta" >Register_now()</span></a></br></p>
+ <p style="font-size: 30px;margin-top: 20px; text-align: center;"></br></p>
   <!-- <button  class="tsbutton">Register Now</button> --><!-- <noscript id="tsNoJsMsg">Javascript on your browser is not enabled.</noscript><script src="https://www.townscript.com/popup-widget/townscript-widget.nocache.js" type="text/javascript"></script> -->
 </div>
 <div class="col-md-7">
@@ -87,6 +87,10 @@ Let's see how far you go, for there's no way you'll finish. We look forward to s
 Obscura, the place you'll never wanna leave, you'll never leave.
 Enter at own risk, there's no getting out.
               </p>
+              OBSCURA has ended.</br>
+              Winners<br>
+              Away- Popescu Mihai<br>
+              Home- Anandu Syrus
               </div>
 
               <div class="col-md-5">
@@ -110,7 +114,7 @@ Enter at own risk, there's no getting out.
 
 
               <div class="col-md-6">
-               <p style="font-size: 30px;margin-top: 20px;"><a href="#" onclick="popup('dotslash-workshops-100344');"><span class="spMagenta" >Register_now()</span></a></br></p>
+               <p style="font-size: 30px;margin-top: 20px;"></br></p>
               </div>
 
               <div class="col-md-6">
