added gaming links

--- a/public/event/gaming/index.html
+++ b/public/event/gaming/index.html
@@ -77,12 +77,9 @@
             <div style="margin-top: 30px;" class ="row">
 
               <div class="col-md-6">
-              <p ><span class="spGreen" >//Fifa</span></br>Wage the wars of the next generation, pit your skills against   those who challenges your absolute authority on the realms of tactical shooting and impeccable teamwork. Nerves of steel and inhuman reflexes will be your allies as the world watches you with bated breath.
+              <p ><span class="spGreen" >//Fifa</span></br>Do you love football? Do you wish to blur the lines between the real and the virtual world, do you think  you can slither your way past  the line of defense like Messi does or smash the net with shots from out of this world like Ronaldo does.
+             </div>
 
-
-
-              </p>
-              </div>
 
               <div class="col-md-6">
              <p ><span class="spGreen" >//Tom Clancy’s Rainbow Six Siege</span></br>Wage the wars of the next generation, pit your skills against  those who challenges your absolute authority on the realms of tactical shooting and impeccable teamwork. Nerves of steel and inhuman reflexes will be your allies as the world watches you with bated breath.
@@ -103,7 +100,7 @@ Participants are advised to bring their own joysticks/keyboards.
 </p>
               </div>
               <div class="col-md-6">
-              <p><span class="spOrange">$Prizes</span></p><p>* First - <span style="font-size:30px;margin-top: 10px;">3k</span></p>
+              <p><span class="spOrange">$Prizes</span></p><p>*will be updated soon<span style="font-size:30px;margin-top: 10px;"></span></p>
               <!--<p>* Second - <span style="font-size:30px;margin-top: 10px;">3k</span></p>-->
               </div>
 
@@ -113,7 +110,11 @@ Participants are advised to bring their own joysticks/keyboards.
 
 
               <div class="col-md-6">
-               <p style="font-size: 30px;margin-top: 20px;"><a href="https://docs.google.com/forms/d/e/1FAIpQLSdXziYUutjOqlpcddgGLTQzYYaEbhRSSAapELV3vHeVhVD55A/viewform?c=0&w=1&usp=mail_form_link"><span class="spMagenta" >Register_now() - Rainbow Six Siege</span></a></br></p>
+               <p style="font-size: 30px;margin-top: 20px;">
+                <a href="https://docs.google.com/forms/d/1adUPD4tcK7vRyXi0MwIKHn4pD0ZokaW4Db9dGu5b804/edit?usp=drivesdk"><span class="spMagenta" >Register_now() - Fifa</span></a>
+                <a href="https://docs.google.com/forms/d/e/1FAIpQLSdXziYUutjOqlpcddgGLTQzYYaEbhRSSAapELV3vHeVhVD55A/viewform?c=0&w=1&usp=mail_form_link"><span class="spMagenta" >Register_now() - Rainbow Six Siege</span></a></br>
+               
+               </p>
               </div>
 
               <div class="col-md-6">
