--- a/public/workshop/bigdata/index.html
+++ b/public/workshop/bigdata/index.html
@@ -106,7 +106,9 @@
              * Windows OS </p>
               </div>
               <div class="col-md-4">
-              <p><span class="spOrange">Classes handled by</span></br>*</br><!-- <a href="https://www.linkedin.com/in/tittuvarghese/">::check_this_out()</a> --></p>
+              <p><span class="spOrange">Classes handled by</span></br>*
+                In association with<br>ELAN & NVISION<br>
+                IIT Hyderabad<!-- <a href="https://www.linkedin.com/in/tittuvarghese/">::check_this_out()</a> --></p>
               </div>
 
           </div>
