--- a/public/talks/securitydemonstration/index.html
+++ b/public/talks/securitydemonstration/index.html
@@ -64,7 +64,7 @@
   <div class="col-md-4">
   <img src="../../assets/img/secure.png" class="img-responsive pull-center" style="margin: auto; margin-bottom: 40px;">
   <p align="center">Brought to you by</p>
-   <img src="../../assets/img/Secdot.JPG" class="img-responsive pull-center" style="margin:auto;">
+   <img src="../../assets/img/secdotlogo.jpg" class="img-responsive pull-center" style="margin:auto;">
  <!--<p style="font-size: 30px;margin-top: 20px; text-align: center;"><a onclick="popup('dotslash-workshops-100344');" href="#" ><span class="spMagenta">Register_now()</span></a></br></p>-->
   <!-- <button  class="tsbutton">Register Now</button> --><!-- <noscript id="tsNoJsMsg">Javascript on your browser is not enabled.</noscript><script src="https://www.townscript.com/popup-widget/townscript-widget.nocache.js" type="text/javascript"></script> -->
 </div>
