added rainbow six newlink

--- a/public/event/gaming/index.html
+++ b/public/event/gaming/index.html
@@ -114,7 +114,7 @@ Participants are advised to bring their own joysticks/keyboards.
               <div class="col-md-6">
                <p style="font-size: 30px;margin-top: 20px;">
                 <a href="https://docs.google.com/forms/d/1adUPD4tcK7vRyXi0MwIKHn4pD0ZokaW4Db9dGu5b804/edit?usp=drivesdk"><span class="spMagenta" >Register_now() - Fifa</span></a>
-                <a href="https://docs.google.com/forms/d/e/1FAIpQLSdXziYUutjOqlpcddgGLTQzYYaEbhRSSAapELV3vHeVhVD55A/viewform?c=0&w=1&usp=mail_form_link"><span class="spMagenta" >Register_now() - Rainbow Six Siege</span></a></br>
+                <a href="https://docs.google.com/forms/d/1ECfVEZFbe4hjtvhAPJnghiU9Oufj8Jt8VB3IgNmd_A0/edit"><span class="spMagenta" >Register_now() - Rainbow Six Siege</span></a></br>
                
                </p>
               </div>
